RESOLVED FIXED131903
Plug-in process crashes if NP_Initialize returns an error the second time it's called
https://bugs.webkit.org/show_bug.cgi?id=131903
Summary Plug-in process crashes if NP_Initialize returns an error the second time it'...
Anders Carlsson
Reported 2014-04-19 17:51:23 PDT
Plug-in process crashes if NP_Initialize returns an error the second time it's called
Attachments
Patch (1.69 KB, patch)
2014-04-19 17:53 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2014-04-19 17:53:18 PDT
Anders Carlsson
Comment 2 2014-04-19 17:54:30 PDT
Note You need to log in before you can comment on or make changes to this bug.