Plug-in process crashes if NP_Initialize returns an error the second time it's called https://bugs.webkit.org/show_bug.cgi?id=131903 <rdar://problem/14355462>

Reviewed by Sam Weinig.

* Shared/Plugins/Netscape/NetscapePluginModule.cpp:
(WebKit::NetscapePluginModule::decrementLoadCount):
Don't try to unload the plug-in if it hasn't been initialized.

Canonical link: https://commits.webkit.org/149976@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167556 268f45cc-cd09-0410-ab3c-d52691b4dbfc